#821: Manteniment de tipus d'expedient
Task-Url: https://github.com/GovernIB/helium/issues/issues/821

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -249,6 +249,8 @@ expedient.tipus.llistat.accio.dissenyar=Dissenyar
 expedient.tipus.llistat.accio.esborrar=Esborrar
 expedient.tipus.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquest tipus d'expedient? Aquesta acció no es pot tornar enrera una vegada executada.
 
+expedient.tipus.ambInfoPropia.avis=Atenció! El tipus d''expedient no està configurat per utilitzar la informació pròpia. Modifiqueu el tipus d''expedient i marqueu la opció \"{0}\" si voleu utilitzar aquestes dades en comptes de les de la definició de procés.
+
 expedient.tipus.pipelles.titol=Configuració del tipus d'expedient
 expedient.tipus.pipelles.pipella.informacio=Informació
 expedient.tipus.pipelles.pipella.estats=Estats
@@ -285,6 +287,7 @@ expedient.tipus.form.titol.modificar=Modificar tipus d'expedient
 expedient.tipus.form.camp.codi=Codi
 expedient.tipus.form.camp.titol=Títol
 expedient.tipus.form.camp.ambInfoPropia=Amb informació pròpia
+expedient.tipus.form.camp.ambInfoPropia.nota=Si es marca aquesta opció les dades que es prendran seran les del tipus d'expedient. En cas contrari les dades seran les de la versió de la definició de procés.
 expedient.tipus.form.camp.teTitol=Amb títol
 expedient.tipus.form.camp.demanaTitol=Demana títol
 expedient.tipus.form.camp.teNumero=Amb número
@@ -449,19 +452,20 @@ expedient.tipus.agrupacio.llistat.columna.ordre=Ordre
 
 # Manteniment de definicions de processos del tipus d'expedient
 expedient.tipus.definicioProces.llistat.columna.nom=Nom
-expedient.tipus.definicioProces.llistat.columna.versio=Versió
+expedient.tipus.definicioProces.llistat.columna.versions=Versions
 expedient.tipus.definicioProces.llistat.columna.dataVersio=Data versió
 expedient.tipus.definicioProces.llistat.columna.inicial=Inicial
 expedient.tipus.definicioProces.llistat.columna.global=Global
 expedient.tipus.definicioProces.llistat.definicioProces.desplegar=Desplegar arxiu
+expedient.tipus.definicioProces.llistat.definicioProces.dissenyar=Dissenyar
 expedient.tipus.definicioProces.llistat.definicioProces.inicial=Marcar com inicial
 expedient.tipus.definicioProces.llistat.definicioProces.inicial.error=S'ha produït un error al interntar establir la definició de procés inicial
 expedient.tipus.definicioProces.llistat.definicioProces.inicial.correcte=La definició de procés s'ha marcat com a inicial correctament
 expedient.tipus.definicioProces.llistat.definicioProces.importar=Importar la informació
 expedient.tipus.definicioProces.llistat.definicioProces.importar.error=S'ha produït un error durant la importació de la informació de la definició de procés
 expedient.tipus.definicioProces.llistat.definicioProces.importar.correcte=La informació de la definició de procés s'ha importat correctament al tipus d'expedient
-expedient.tipus.definicioProces.llistat.definicioProces.esborrar=Esborrar
-expedient.tipus.definicioProces.llistat.definicioProces.esborrar.confirmacio=Estau segur que voleu esborrar aquesta definició de procés?
+expedient.tipus.definicioProces.llistat.definicioProces.esborrar=Esborrar la darrera versió
+expedient.tipus.definicioProces.llistat.definicioProces.esborrar.confirmacio=Estau segur que voleu esborrar la darrera versió d'aquesta definició de procés?
 expedient.tipus.definicioProces.llistat.definicioProces.esborrar.error=S'ha produït un error al interntar esborrar la definició de procés del tipus d'expedient
 expedient.tipus.definicioProces.llistat.definicioProces.esborrar.correcte=La definició de procés s'ha esborrat correctament
 
@@ -512,6 +516,7 @@ expedient.tipus.document.controller.eliminat=El document s'ha eliminat correctam
 # Manteniment d'accions del tipus d'expedient
 expedient.tipus.accio.llistat.columna.codi=Codi
 expedient.tipus.accio.llistat.columna.nom=Nom
+expedient.tipus.accio.llistat.columna.defprocJbpmKey=Definició de procés
 expedient.tipus.accio.llistat.columna.jbpmAction=Handler
 expedient.tipus.accio.llistat.accio.nova=Nova acció
 expedient.tipus.accio.llistat.accio.modificar=Modificar
@@ -524,6 +529,8 @@ expedient.tipus.accio.form.titol.nova=Crear una nova acció
 expedient.tipus.accio.form.titol.modificar=Modificar la acció
 expedient.tipus.accio.form.accio.codi=Codi
 expedient.tipus.accio.form.accio.nom=Nom
+expedient.tipus.accio.form.accio.defprocJbpmKey=Definició de procés
+expedient.tipus.accio.form.accio.defprocJbpmKey.placeholder=Seleccioni la definició de procés que conté el handler
 expedient.tipus.accio.form.accio.jbpmAction=Handler
 expedient.tipus.accio.form.accio.descripcio=Descripció
 expedient.tipus.accio.form.accio.publica=Pública
@@ -666,7 +673,6 @@ expedient.tipus.integracio.forms.url=Url del servei d'integració amb formularis 
 expedient.tipus.integracio.forms.usuari=Usuari del servei
 expedient.tipus.integracio.forms.contrasenya=Contrasenya del servei
 expedient.tipus.integracio.forms.noaut=Si no necessita autenticació es pot deixar en blanc
-expedient.tipus.integracio.forms.processant=Processant ...
 
 expedient.tipus.integracio.forms.controller.guardat=Els canvis s'han guardat correctament
 expedient.tipus.integracio.forms.validacio = Errors de validació
@@ -679,7 +685,6 @@ expedient.tipus.integracio.tramits.variables=Variables
 expedient.tipus.integracio.tramits.documents=Documents
 expedient.tipus.integracio.tramits.adjunts=Adunts
 expedient.tipus.integracio.tramits.tramitCodi=Identificador del tràmit
-expedient.tipus.integracio.tramits.processant=Processant ...
 
 expedient.tipus.integracio.tramits.controller.guardat=Els canvis s'han guardat correctament
 expedient.tipus.integracio.tramits.validacio = Errors de validació
@@ -801,6 +806,91 @@ consulta.llistat.columna.expedientTipusNom=Tipus d'expedient
 consulta.llistat.accio.esborrar=Esborrar
 consulta.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquesta consulta? Aquesta acció no es pot tornar enrera una vegada executada.
 
+definicio.proces.pipelles.titol=Definició de procés
+definicio.proces.pipelles.definicio.proces.actual=Definició de procés actual
+definicio.proces.pipelles.pipella.detalls=Detalls
+definicio.proces.pipelles.pipella.tasques=Tasques
+definicio.proces.pipelles.pipella.recursos=Recursos
+definicio.proces.pipelles.cap=No s'ha trobat cap definició de procés amb aquest codi
+
+definicio.proces.detall.camp.id=Id
+definicio.proces.detall.camp.codi=Codi
+definicio.proces.detall.camp.versio=Versió
+definicio.proces.detall.camp.etiqueta=Etiqueta
+definicio.proces.detall.camp.tipus.expedient=Tipus d'expedient
+definicio.proces.detall.camp.dataCreacio=Creat el
+definicio.proces.detall.subdef=Subdefinicions de procés
+definicio.proces.detall.cap=Aquesta definició de procés no conté cap dada
+
+
+definicio.proces.tasca.llistat.columna.codi=Codi
+definicio.proces.tasca.llistat.columna.titol=Títol
+definicio.proces.tasca.llistat.accio.variables=Variables
+definicio.proces.tasca.llistat.accio.documents=Documents
+definicio.proces.tasca.llistat.accio.signatures=Signatures
+
+definicio.proces.tasca.form.titol.modificar=Modificar la tasca
+definicio.proces.tasca.form.jbpmName=Codi
+definicio.proces.tasca.form.nom=Títol
+definicio.proces.tasca.form.missatgeInfo=Missatge d'informació
+definicio.proces.tasca.form.missatgeWarn=Missatge d'alerta
+definicio.proces.tasca.form.nomScript=Script pel títol
+definicio.proces.tasca.form.nomScript.nota=Si no està buit s'evaluarà aquest script per obtenir el títol de la tasca
+definicio.proces.tasca.form.expressioDelegacio=Delegable?
+definicio.proces.tasca.form.recursForm=Recurs amb el formulari
+definicio.proces.tasca.form.formExtern=Codi del formulari extern
+definicio.proces.tasca.form.tramitacioMassiva=Tramitació massiva?
+definicio.proces.tasca.form.finalitzacioSegonPla=Finalització segon pla?
+
+definicio.proces.tasca.variable.titol=Variables de la tasca {0}
+definicio.proces.tasca.variable.form.variable=Variable
+definicio.proces.tasca.variable.form.variable.placeholder=Escolliu una variable
+definicio.proces.tasca.variable.columna.variable=Variable
+definicio.proces.tasca.variable.columna.readFrom=Read from
+definicio.proces.tasca.variable.columna.writeTo=Write to
+definicio.proces.tasca.variable.columna.required=Required
+definicio.proces.tasca.variable.columna.readOnly=Read only
+
+definicio.proces.tasca.variable.columna.ordre=Ordre
+definicio.proces.tasca.variable.accio.afegir=Afegir
+definicio.proces.tasca.variable.accio.esborrar=Esborrar
+definicio.proces.tasca.variable.confirmacio.esborrar=Estau segur que voleu esborrar aquesta variable?
+
+definicio.proces.tasca.controller.modificat=La tasca s'ha modificat correctament
+definicio.proces.tasca.controller.variable.creat=La variable s'ha creat correctament
+definicio.proces.tasca.controller.variable.eliminat=La variable s'ha eliminat correctament
+
+definicio.proces.tasca.document.titol=Documents de la tasca {0}
+definicio.proces.tasca.document.form.document=Document
+definicio.proces.tasca.document.form.document.placeholder=Escolliu un document
+definicio.proces.tasca.document.columna.document=Document
+definicio.proces.tasca.document.columna.required=Required
+definicio.proces.tasca.document.columna.readOnly=Read only
+
+definicio.proces.tasca.document.columna.ordre=Ordre
+definicio.proces.tasca.document.accio.afegir=Afegir
+definicio.proces.tasca.document.accio.esborrar=Esborrar
+definicio.proces.tasca.document.confirmacio.esborrar=Estau segur que voleu esborrar aquest document?
+
+definicio.proces.tasca.controller.document.creat=El document s'ha creat correctament
+definicio.proces.tasca.controller.document.eliminat=Eldocument s'ha eliminat correctament
+
+definicio.proces.tasca.firma.titol=Signatures de la tasca {0}
+definicio.proces.tasca.firma.form.document=Document
+definicio.proces.tasca.firma.form.firma.placeholder=Escolliu un document
+definicio.proces.tasca.firma.columna.document=Document
+definicio.proces.tasca.firma.columna.required=Required
+definicio.proces.tasca.firma.columna.ordre=Ordre
+definicio.proces.tasca.firma.accio.afegir=Afegir
+definicio.proces.tasca.firma.accio.esborrar=Esborrar
+definicio.proces.tasca.firma.confirmacio.esborrar=Estau segur que voleu esborrar aquesta firma?
+
+definicio.proces.tasca.controller.firma.creat=La firma s'ha creat correctament
+definicio.proces.tasca.controller.firma.eliminat=La firma s'ha eliminat correctament
+
+definico.proces.recurs.columna.nom=Nom
+definico.proces.recurs.columna.contingut=Contingut
+definico.proces.recurs.descarregar=Descarregar contingut
 
 tasca.llistat.titol=Consulta de tasques
 tasca.llistat.filtre.camp.titol=Títol
@@ -929,9 +1019,12 @@ comu.boto.esborrar=Esborrar
 comu.boto.tornar=Tornar
 comu.tots=Tots
 comu.arxiu=Arxiu
+comu.processant=Processant
 
 comu.true=Sí
 comu.false=No
+
+comu.check=&#10003
 
 perfil.usuari.expedients=Expedients
 perfil.usuari.tasques=Tasques
