887: Eliminacio DP amb nova interfície
Task-Url: https://github.com/GovernIB/helium/issues/issue/887

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -453,6 +453,7 @@ expedient.tipus.agrupacio.llistat.columna.ordre=Ordre
 # Manteniment de definicions de processos del tipus d'expedient
 expedient.tipus.definicioProces.llistat.columna.nom=Nom
 expedient.tipus.definicioProces.llistat.columna.versions=Versions
+expedient.tipus.definicioProces.llistat.columna.versio=Versió
 expedient.tipus.definicioProces.llistat.columna.dataVersio=Data versió
 expedient.tipus.definicioProces.llistat.columna.inicial=Inicial
 expedient.tipus.definicioProces.llistat.columna.global=Global
