820: Simplificació de la configuració en les definicions de procés
Task-Url: https://github.com/GovernIB/helium/issues/issue/820

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -964,7 +964,8 @@ expedient.boto.veure_errors=Veure errors
 expedient.boto.veure_alertes=Veure alertes
 
 expedient.nova.data.nova=Nova variable
-expedient.nova.data.existent=Variables definides en el procés
+expedient.nova.data.no.definida=Variable no definida
+expedient.nova.data.definida=Variables ja definides
 expedient.nova.data.string=Nova variable de tipus String
 expedient.nova.data.selecciona=Selecciona una opció
 expedient.nova.data.codi=Codi
