#891: Millora dels missatges d'error OpenOffice
Task-Url: https://github.com/GovernIB/helium/issues/issue/891

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -280,6 +280,7 @@ error.dissenyService.enumNoDefinida=L'enumeració '{0}' no està definida
 error.dissenyService.dominiNoDefinit=El domini '{0}' no està definit
 
 error.document.obtenir=Error al obtenir el document
+error.document.conversio.externa=S'ha produït un error amb el servidor extern de conversió de documents.
 
 error.dtoConverter.consultarDomini=No s''ha pogut consultar el domini
 
