#889: Millores en el procés d'importació de tipus d'expedients
Task-Url: https://github.com/GovernIB/helium/issues/issues/889

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -275,6 +275,7 @@ error.dissenyService.noConte=l''arxiu no conté cap definició de procés.
 error.dissenyService.noEntorn=No s''ha especificat cap entorn o la definició de procés no correspon amb l'entorn especificat
 error.dissenyService.noTipusExp=No s''ha especificat cap tipus d''expedient o la definició de procés no correspon amb el tipus d''expedient especificat
 error.dissenyService.generantContingut=Error generant el contingut del desplegament
+error.dissenyService.generantContingut.definicioProces=Error generant el contingut del desplegament per a la definició de proccés "{0}"
 error.dissenyService.consultantDomini=Error consultant el domini
 error.dissenyService.enumNoDefinida=L'enumeració '{0}' no està definida
 error.dissenyService.dominiNoDefinit=El domini '{0}' no està definit
