--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -244,6 +244,7 @@ expedient.tipus.llistat.titol=Tipus d'expedient
 expedient.tipus.llistat.columna.codi=Codi
 expedient.tipus.llistat.columna.titol=Títol
 expedient.tipus.llistat.accio.permisos=Permisos
+expedient.tipus.llistat.accio.importar=Importar
 expedient.tipus.llistat.accio.nou=Nou tipus d'expedient
 expedient.tipus.llistat.accio.dissenyar=Dissenyar
 expedient.tipus.llistat.accio.esborrar=Esborrar
@@ -278,6 +279,8 @@ expedient.tipus.info.camp.permet.reindexacioAsincrona=Reindexar asíncronament?
 expedient.tipus.info.camp.definicio.proces.inicial=Definició de procés inicial
 expedient.tipus.info.camp.reponsable.defecte=Responsable per defecte
 expedient.tipus.info.accio.modificar=Modificar
+expedient.tipus.info.accio.importar=Importar
+expedient.tipus.info.accio.exportar=Exportar
 expedient.tipus.info.accio.agrupar=Agrupar
 expedient.tipus.info.accio.desagrupar=Desagrupar
 expedient.tipus.info.permis.no=No disposa de permís per a modificar l'expedient
@@ -318,7 +321,87 @@ expedient.tipus.permis.form.titol.modificar=Modificar permis
 expedient.tipus.permis.form.camp.tipus=Tipus
 expedient.tipus.permis.form.camp.principal=Principal
 
-expedient.tipus.validacio=Errors de validació
+expedient.tipus.exportar.form.titol=Exportació del tipus d'expedient
+expedient.tipus.exportar.form.boto.exportar=Exportar
+expedient.tipus.exportar.form.estats=Estats
+expedient.tipus.exportar.form.variables=Variables
+expedient.tipus.exportar.form.variables.titol=Títol
+expedient.tipus.exportar.form.variables.tipus=Tipus
+expedient.tipus.exportar.form.variables.agrupacio=Agrupació
+expedient.tipus.exportar.form.agrupacions=Agrupacions
+expedient.tipus.exportar.form.definicions=Definicions de procés
+expedient.tipus.exportar.form.definicions.versio=Versió
+expedient.tipus.exportar.form.integracions=Integracions
+expedient.tipus.exportar.form.integracions.sistra=Integració amb SISTRA
+expedient.tipus.exportar.form.integracions.forms=Integració amb formularis externs
+expedient.tipus.exportar.form.integracions=Integracions
+expedient.tipus.exportar.form.enumeracions=Enumeracions
+expedient.tipus.exportar.form.documents=Documents
+expedient.tipus.exportar.form.terminis=Terminis
+expedient.tipus.exportar.form.accions=Accions
+expedient.tipus.exportar.form.dominis=Dominis
+expedient.tipus.exportar.form.consultes=Consultes
+
+expedient.tipus.exportar.form.camp.codi=Codi
+expedient.tipus.exportar.form.camp.titol=Títol
+expedient.tipus.exportar.form.camp.ambInfoPropia=Amb informació pròpia
+expedient.tipus.exportar.form.camp.ambInfoPropia.nota=Si es marca aquesta opció les dades que es prendran seran les del tipus d'expedient. En cas contrari les dades seran les de la versió de la definició de procés.
+expedient.tipus.exportar.form.camp.teTitol=Amb títol
+expedient.tipus.exportar.form.camp.demanaTitol=Demana títol
+expedient.tipus.exportar.form.camp.teNumero=Amb número
+expedient.tipus.exportar.form.camp.demanaNumero=Demana número
+expedient.tipus.exportar.form.camp.expressioNumero=Expressió per calcular el número
+expedient.tipus.exportar.form.camp.reiniciarCadaAny=Reinciar seqüència anualment
+expedient.tipus.exportar.form.camp.reiniciarCadaAny.seq_actuals=Seqüències actuals
+expedient.tipus.exportar.form.camp.reiniciarCadaAny.any=Any
+expedient.tipus.exportar.form.camp.reiniciarCadaAny.sequencia=Seqüència
+expedient.tipus.exportar.form.boto.esborrar=Esborrar any
+expedient.tipus.exportar.form.boto.afegir=Afegir any
+expedient.tipus.exportar.form.camp.sequencia=Seqüència actual
+expedient.tipus.exportar.form.camp.responsableDefecteCodi=Responsable per defecte
+expedient.tipus.exportar.form.camp.restringirPerGrup=Restringir accés segons el grups de l'usuari
+expedient.tipus.exportar.form.camp.seleccionarAny=Permetre seleccionar any d'inici d'expedient
+expedient.tipus.exportar.form.camp.ambRetroaccio=Amb retroacció
+expedient.tipus.exportar.form.camp.reindexacioAsincrona=Reindexació asíncrona
+
+expedient.tipus.exportar.validacio=Errors de validació
+expedient.tipus.exportar.validacio.expedientTipusIdNull=El tipus d'expedient a exportar no pot estar buit
+expedient.tipus.exportar.validacio.mapeigSistra=En la integració amb Sistra és necessària la variable "{0}" pel mapeig amb el codi Sistra "{1}"
+expedient.tipus.exportar.validacio.variable.registre=La variable de tipus registre "{0}" necessita la variable "{1}"
+expedient.tipus.exportar.validacio.variable.accio=La variable de tipus accio "{0}" necessita la definició de procés "{1}"
+expedient.tipus.exportar.validacio.variable.seleccio.enumeracio=La variable de tipus selecció "{0}" necessita la enumeració "{1}"
+expedient.tipus.exportar.validacio.variable.seleccio.domini=La variable de tipus selecció "{0}" necessita el domini "{1}"
+expedient.tipus.exportar.validacio.variable.seleccio.consulta=La variable de tipus selecció "{0}" necessita la consulta "{1}"
+expedient.tipus.exportar.validacio.consulta.variable=La consulta "{0}" necessita la variable "{1}"
+expedient.tipus.exportar.validacio.document.variable=El document "{0}" necessita la variable "{1}" pel camp de la data
+
+expedient.tipus.exportar.validacio.definicio.desplegada.tipus.expedient=La definició de procés "{0}" ja està desplegada a dins el tipus d''expedient "{1} - {2}"
+expedient.tipus.exportar.validacio.definicio.desplegada.entorn=La definició de procés "{0}" ja està desplegada a dins l'entorn
+
+expedient.tipus.exportar.validacio.definicio.variable=La tasca "{0}" de la definició de procés "{1}" necessita la variable "{2}"
+expedient.tipus.exportar.validacio.definicio.document=La tasca "{0}" de la definició de procés "{1}" necessita el document "{2}"
+expedient.tipus.exportar.validacio.definicio.firma=La tasca "{0}" de la definició de procés "{1}" necessita el document "{2}" per una signatura
+
+
+expedient.tipus.importar.form.titol.nou=Importació d'un nou tipus d'expedient
+expedient.tipus.importar.form.titol.modificar=Importació d''un tipus d''expedient sobre el tipus d''expedient "{0} - {1}"
+expedient.tipus.importar.form.avis.codi.diferent=Avís: S''està important informació del tipus d''expedient <b>"{0} - {1}"</b> amb codi diferent de l''actual sobre el que s''està realitzant la importació
+expedient.tipus.importar.form.boto.carregar=Carregar
+expedient.tipus.importar.form.boto.importar=Importar
+expedient.tipus.importar.form.carregar=Carregar el fitxer
+expedient.tipus.importar.form.seleccionar=Seleccionar el contingut
+expedient.tipus.importar.form.opcions.dadesBasiques=Incloure dades bàsiques (títol, opcions, seqüències)
+expedient.tipus.importar.form.opcions.sobreEscriure=Sobreescriure dades existents amt mateix codi
+expedient.tipus.importar.form.camp.codi=Codi
+
+expedient.tipus.importar.form.error.arxiu.buit=No s'ha seleccionat cap arxiu o no conté cap informació
+expedient.tipus.importar.form.error.arxiu.erroni=El contingut de l'arxiu no es correspon amb una exportació de tipus d'expedient tal i com s'espera
+expedient.tipus.importar.form.error.lectura=Error llegint l'arxiu a importar
+expedient.tipus.importar.form.error.importacio=Error durant la importació del contingut: {0}
+expedient.tipus.importar.validacio.codi.repetit=Tipus d''expedient ja existent: {0}
+
+expedient.tipus.importar.form.success=La importació del tipus d'expedient s'ha realitzat correctament.
+
 expedient.tipus.validacio.codi.repetit=Aquest codi ja existeix
 expedient.tipus.validacio.seq.any=El format de l''any està buit o és incorrecte
 expedient.tipus.validacio.seq.any.repetit=Hi ha anys repetits en la taula de seqüències
@@ -379,6 +462,12 @@ expedient.tipus.camp.form.camp.consultaParametres=Paràmetres de la consulta
 expedient.tipus.camp.form.camp.consultaCampValor=Camp amb el valor
 expedient.tipus.camp.form.camp.consultaCampText=Camp amb el text
 expedient.tipus.camp.form.camp.dominiCacheText=Mantenir valor de la consulta
+expedient.tipus.camp.form.camp.consultaCampText=Camp amb el text
+expedient.tipus.camp.form.camp.dominiCacheText=Mantenir valor de la consulta
+
+expedient.tipus.camp.form.camp.defprocJbpmKey=Definició de procés
+expedient.tipus.camp.form.camp.defprocJbpmKey.placeholder=Seleccioni la definició de procés que conté el handler
+expedient.tipus.camp.form.camp.jbpmAction=Handler
 
 
 expedient.tipus.camp.form.fieldset.accio=Dades per la acció
@@ -462,19 +551,19 @@ expedient.tipus.definicioProces.llistat.definicioProces.dissenyar=Dissenyar
 expedient.tipus.definicioProces.llistat.definicioProces.inicial=Marcar com inicial
 expedient.tipus.definicioProces.llistat.definicioProces.inicial.error=S'ha produït un error al interntar establir la definició de procés inicial
 expedient.tipus.definicioProces.llistat.definicioProces.inicial.correcte=La definició de procés s'ha marcat com a inicial correctament
-expedient.tipus.definicioProces.llistat.definicioProces.importar=Importar la informació
-expedient.tipus.definicioProces.llistat.definicioProces.importar.error=S'ha produït un error durant la importació de la informació de la definició de procés
-expedient.tipus.definicioProces.llistat.definicioProces.importar.correcte=La informació de la definició de procés s'ha importat correctament al tipus d'expedient
+expedient.tipus.definicioProces.llistat.definicioProces.incorporar=Incorporar la informació
+expedient.tipus.definicioProces.llistat.definicioProces.incorporar.error=S'ha produït un error durant la incorporació de la informació de la definició de procés
+expedient.tipus.definicioProces.llistat.definicioProces.incorporar.correcte=La informació de la definició de procés s'ha incorporat correctament al tipus d'expedient
 expedient.tipus.definicioProces.llistat.definicioProces.esborrar=Esborrar la darrera versió
 expedient.tipus.definicioProces.llistat.definicioProces.esborrar.confirmacio=Estau segur que voleu esborrar la darrera versió d'aquesta definició de procés?
 expedient.tipus.definicioProces.llistat.definicioProces.esborrar.error=S'ha produït un error al interntar esborrar la definició de procés del tipus d'expedient
 expedient.tipus.definicioProces.llistat.definicioProces.esborrar.correcte=La definició de procés s'ha esborrat correctament
 
-expedient.tipus.definicioProces.importar.titol=Importació de la informació de la definició de procés
-expedient.tipus.definicioProces.importar.versio=Versió de la definició de procés
-expedient.tipus.definicioProces.importar.versio.placeholder=<< Darrera versió >>
-expedient.tipus.definicioProces.importar.sobreescriure=Sobreescriure informació amb el mateix codi
-expedient.tipus.definicioProces.importar.accio.importar=Importar informació
+expedient.tipus.definicioProces.incorporar.titol=Incorporació de la informació de la definició de procés cap al tipus d'expedient
+expedient.tipus.definicioProces.incorporar.versio=Versió de la definició de procés
+expedient.tipus.definicioProces.incorporar.versio.placeholder=<< Darrera versió >>
+expedient.tipus.definicioProces.incorporar.sobreescriure=Sobreescriure informació amb el mateix codi
+expedient.tipus.definicioProces.incorporar.accio.incorporar=Incorporar informació
 
 ### MANTENIMENT DOCUMENTS DEL TIPUS D'EXPEDIENT ###
 expedient.tipus.document.llistat.columna.codi=Codi
