#893: Informació errònea i errors esborrant DP segon pla
Task-Url: https://github.com/GovernIB/helium/issues/issue/893

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -58,6 +58,7 @@ error.marcar.alerta.no.llegida=No s''ha pogut marcar l''alerta com a no llegida
 error.esborrar.alerta=No s''ha pogut esborrar l''alerta
 error.crear.alerta=No s''ha pogut crear l''alerta
 
+error.proces.esborrar.empty=No s'ha programat cap eliminació de definicions de procés. Pot ser ja s'han esborrat.
 error.proces.peticio=S'ha produït un error processant la seva petició
 error.esborrar.area=No s''ha pogut esborrar l'àrea
 
@@ -258,10 +259,12 @@ error.consulta.informe.nofiltre=Seleccioni primer una consulta
 error.consulta.tipexp.noaut=No està autoritzat per a consultar aquest tipus d''expedient
 error.ordre.consulta=No s''ha pogut modificar l'ordre
 
-error.defpro.eliminar.constraint=No es pot eliminar la definició de procés [ {0} v.{1} ] degut a que existeixen referències a la Base de Dades que en fan referència
+error.defpro.eliminar.constraint=No es pot eliminar la definició de procés [ {0} v.{1} ] degut a que existeixen relacions a la Base de Dades que en fan referència
 error.defpro.eliminar.constraint.taskinstance=ERROR: Existeixen tasques associades a la definició de procés antiga, tot i haver-se canviat de versió els expedients.
 error.defpro.eliminar.constraint.job=ERROR: Existeixen timers actius associats a la definició de procés antiga.
 error.defpro.eliminar.constraint.log=ERROR: Existeixen referències en logs associats a la definició de procés antiga que no es poden substituir per referències a la definició de procés actual dels expeidents. Per a poder esborrar la definició de procés serà necessari eliminar els logs dels expedients relacionats.
+error.defpro.eliminar.constraint.swl=ERROR: Existeixen referències a la 'SWIMLANE' de la definició de procés que n'impedeixen l'eliminació.
+error.defpro.eliminar.constraint.procdef=ERROR: Existeixen referències de la definició de procés que n'impedeixen l'eliminació.
 ##
 # Missatges d''error del package net.conselldemallorca.helium.core.model.service
 ##
