--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -801,6 +801,12 @@ expedient.tipus.integracio.tramits.mapeig.controller.creat=El mapeig s'ha creat 
 expedient.tipus.integracio.tramits.mapeig.controller.modificat=El mapeig s'ha modificat correctament
 expedient.tipus.integracio.tramits.mapeig.controller.eliminar.success=El mapeig s'ha elimitat correctament
 
+# Selectors de tipus de manteniment
+expedient.tipus.mode.titol=Gestionar
+expedient.tipus.mode.te=Tipus d'expedient
+expedient.tipus.mode.dp=Definició de procés
+expedient.tipus.mode.dp.versio=Versió Def. Procés
+
 expedient.accio.errors.titol=Errors de l'expedient
 expedient.accio.aturar.titol=Aturar expedient
 expedient.accio.script.confirmacio=Estau segur que voleu aturar la tramitació d'aquest expedient?
