--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -245,7 +245,6 @@ expedient.tipus.llistat.titol=Tipus d'expedient
 expedient.tipus.llistat.columna.codi=Codi
 expedient.tipus.llistat.columna.titol=Títol
 expedient.tipus.llistat.accio.permisos=Permisos
-expedient.tipus.llistat.accio.importar=Importar
 expedient.tipus.llistat.accio.nou=Nou tipus d'expedient
 expedient.tipus.llistat.accio.dissenyar=Dissenyar
 expedient.tipus.llistat.accio.esborrar=Esborrar
@@ -280,8 +279,6 @@ expedient.tipus.info.camp.permet.reindexacioAsincrona=Reindexar asíncronament?
 expedient.tipus.info.camp.definicio.proces.inicial=Definició de procés inicial
 expedient.tipus.info.camp.reponsable.defecte=Responsable per defecte
 expedient.tipus.info.accio.modificar=Modificar
-expedient.tipus.info.accio.importar=Importar
-expedient.tipus.info.accio.exportar=Exportar
 expedient.tipus.info.accio.agrupar=Agrupar
 expedient.tipus.info.accio.desagrupar=Desagrupar
 expedient.tipus.info.permis.no=No disposa de permís per a modificar l'expedient
@@ -323,7 +320,6 @@ expedient.tipus.permis.form.camp.tipus=Tipus
 expedient.tipus.permis.form.camp.principal=Principal
 
 expedient.tipus.exportar.form.titol=Exportació del tipus d'expedient
-expedient.tipus.exportar.form.boto.exportar=Exportar
 expedient.tipus.exportar.form.estats=Estats
 expedient.tipus.exportar.form.variables=Variables
 expedient.tipus.exportar.form.variables.titol=Títol
@@ -365,34 +361,47 @@ expedient.tipus.exportar.form.camp.seleccionarAny=Permetre seleccionar any d'ini
 expedient.tipus.exportar.form.camp.ambRetroaccio=Amb retroacció
 expedient.tipus.exportar.form.camp.reindexacioAsincrona=Reindexació asíncrona
 
-expedient.tipus.exportar.validacio=Errors de validació
-expedient.tipus.exportar.validacio.expedientTipusIdNull=El tipus d'expedient a exportar no pot estar buit
-expedient.tipus.exportar.validacio.mapeigSistra=En la integració amb Sistra és necessària la variable "{0}" pel mapeig amb el codi Sistra "{1}"
-expedient.tipus.exportar.validacio.variable.registre=La variable de tipus registre "{0}" necessita la variable "{1}"
-expedient.tipus.exportar.validacio.variable.accio=La variable de tipus accio "{0}" necessita la definició de procés "{1}"
-expedient.tipus.exportar.validacio.variable.seleccio.enumeracio=La variable de tipus selecció "{0}" necessita la enumeració "{1}"
-expedient.tipus.exportar.validacio.variable.seleccio.domini=La variable de tipus selecció "{0}" necessita el domini "{1}"
-expedient.tipus.exportar.validacio.variable.seleccio.consulta=La variable de tipus selecció "{0}" necessita la consulta "{1}"
-expedient.tipus.exportar.validacio.consulta.variable=La consulta "{0}" necessita la variable "{1}"
-expedient.tipus.exportar.validacio.document.variable=El document "{0}" necessita la variable "{1}" pel camp de la data
-
-expedient.tipus.exportar.validacio.definicio.desplegada.tipus.expedient=La definició de procés "{0}" ja està desplegada a dins el tipus d''expedient "{1} - {2}"
-expedient.tipus.exportar.validacio.definicio.desplegada.entorn=La definició de procés "{0}" ja està desplegada a dins l'entorn
-
-expedient.tipus.exportar.validacio.definicio.variable=La tasca "{0}" de la definició de procés "{1}" necessita la variable "{2}"
-expedient.tipus.exportar.validacio.definicio.document=La tasca "{0}" de la definició de procés "{1}" necessita el document "{2}"
-expedient.tipus.exportar.validacio.definicio.firma=La tasca "{0}" de la definició de procés "{1}" necessita el document "{2}" per una signatura
+# Literals comuns per a la importació i exportació de tipus d'expedients i definicions de processos
+exportar.validacio=Errors de validació
+exportar.validacio.expedientTipusIdNull=El tipus d'expedient a exportar no pot estar buit
+exportar.validacio.definicioProcesIdNull=La definicio de proces a exportar no pot estar buit
+exportar.validacio.mapeigSistra.variable=En la integració amb Sistra és necessària la variable "{0}" pel mapeig amb el codi Sistra "{1}"
+exportar.validacio.mapeigSistra.document=En la integració amb Sistra és necessari el document "{0}" pel mapeig amb el codi Sistra "{1}"
+exportar.validacio.variable.agrupacio=La variable "{0}" necessita la agrupació "{1}"
+exportar.validacio.variable.registre=La variable de tipus registre "{0}" necessita la variable "{1}"
+exportar.validacio.variable.accio=La variable de tipus accio "{0}" necessita la definició de procés "{1}"
+exportar.validacio.variable.seleccio.enumeracio=La variable de tipus selecció "{0}" necessita la enumeració "{1}"
+exportar.validacio.variable.seleccio.domini=La variable de tipus selecció "{0}" necessita el domini "{1}"
+exportar.validacio.variable.seleccio.consulta=La variable de tipus selecció "{0}" necessita la consulta "{1}"
+exportar.validacio.consulta.variable=La consulta "{0}" necessita la variable "{1}"
+exportar.validacio.consulta.variable.definicioProces=La consulta "{0}" necessita la variable "{1}" de la definició de procés "{2} v.{3}"
+exportar.validacio.document.variable=El document "{0}" necessita la variable "{1}" pel camp de la data
+exportar.validacio.tasca.variable=La tasca "{0}" necessita la variable "{1}"
+exportar.validacio.tasca.variable.expedientTipus=La tasca "{0}" necessita la variable "{1}" definida dins del tipus d''expedient
+exportar.validacio.tasca.document=La tasca "{0}" necessita el document "{1}"
+exportar.validacio.tasca.document.expedientTipus=La tasca "{0}" necessita el document "{1}" definida dins del tipus d''expedient
+exportar.validacio.tasca.firma=La tasca "{0}" necessita el document "{1}" per les signatures
+exportar.validacio.tasca.firma.expedientTipus=La tasca "{0}" necessita el document "{1}" definida dins del tipus d''expedient per a una signatura
+exportar.validacio.definicio.inicial=La definició de procés "{0}" està configurada com a inicial en el tipus d''expedient
+exportar.validacio.definicio.deploy.error=No s'ha pogut deplegar correctament la definició de procés
+exportar.validacio.definicio.desplegada.tipus.expedient=La definició de procés "{0}" ja està desplegada a dins el tipus d''expedient "{1} - {2}"
+exportar.validacio.definicio.desplegada.entorn=La definició de procés "{0}" ja està desplegada a dins l'entorn
+exportar.validacio.definicio.variable=La tasca "{0}" de la definició de procés "{1}" necessita la variable "{2}"
+exportar.validacio.definicio.variable.consulta=La variable "{0}" de la definició de procés "{1}" necessita la consulta "{2}"
+exportar.validacio.definicio.variable.domini=La variable "{0}" de la definició de procés "{1}" necessita el domini "{2}" dins l'entorn o el tipus d'expedient
+exportar.validacio.definicio.variable.enumeracio=La variable "{0}" de la definició de procés "{1}" necessita la enumeracio "{2}" dins l'entorn o el tipus d'expedient
+exportar.validacio.definicio.document=La tasca "{0}" de la definició de procés "{1}" necessita el document "{2}"
+exportar.validacio.definicio.firma=La tasca "{0}" de la definició de procés "{1}" necessita el document "{2}" per una signatura
 
 
 expedient.tipus.importar.form.titol.nou=Importació d'un nou tipus d'expedient
 expedient.tipus.importar.form.titol.modificar=Importació d''un tipus d''expedient sobre el tipus d''expedient "{0} - {1}"
 expedient.tipus.importar.form.avis.codi.diferent=Avís: S''està important informació del tipus d''expedient <b>"{0} - {1}"</b> amb codi diferent de l''actual sobre el que s''està realitzant la importació
 expedient.tipus.importar.form.boto.carregar=Carregar
-expedient.tipus.importar.form.boto.importar=Importar
 expedient.tipus.importar.form.carregar=Carregar el fitxer
 expedient.tipus.importar.form.seleccionar=Seleccionar el contingut
 expedient.tipus.importar.form.opcions.dadesBasiques=Incloure dades bàsiques (títol, opcions, seqüències)
-expedient.tipus.importar.form.opcions.sobreEscriure=Sobreescriure dades existents amt mateix codi
+expedient.tipus.importar.form.opcions.sobreEscriure=Sobreescriure dades existents amb mateix codi
 expedient.tipus.importar.form.camp.codi=Codi
 
 expedient.tipus.importar.form.error.arxiu.buit=No s'ha seleccionat cap arxiu o no conté cap informació
@@ -857,8 +866,12 @@ expedient.tipus.consulta.validacio = Errors de validació
 expedient.tipus.consulta.vars.llistat.titol=Variables tipus {0} de la consulta {1}
 expedient.tipus.consulta.vars.form.variable=Variable
 expedient.tipus.consulta.vars.form.variable.placeholder=Escolliu una variable
+expedient.tipus.consulta.vars.origen.expedient=Propietats de l'expedient
+expedient.tipus.consulta.vars.origen.tipus.expedient=Variables del tipus d'expedient
+expedient.tipus.consulta.vars.origen.definicions.proces=Definicions de procés
 expedient.tipus.consulta.vars.llistat.columna.variable=Variable
 expedient.tipus.consulta.vars.llistat.columna.tipus=Tipus
+expedient.tipus.consulta.vars.llistat.columna.defincioProces=Definició de procés
 expedient.tipus.consulta.vars.llistat.columna.ordre=Ordre
 expedient.tipus.consulta.vars.llistat.accio.afegir=Afegir
 expedient.tipus.consulta.vars.llistat.accio.esborrar=Esborrar
@@ -982,6 +995,40 @@ definicio.proces.tasca.controller.firma.eliminat=La firma s'ha eliminat correcta
 definico.proces.recurs.columna.nom=Nom
 definico.proces.recurs.columna.contingut=Contingut
 definico.proces.recurs.descarregar=Descarregar contingut
+
+
+definicio.proces.exportar.form.titol=Exportació de la definició de procés
+definicio.proces.exportar.form.versio=Versió de la definició de procés
+definicio.proces.exportar.form.tasques=Tasques
+definicio.proces.exportar.form.variables=Variables
+definicio.proces.exportar.form.variables.titol=Títol
+definicio.proces.exportar.form.variables.tipus=Tipus
+definicio.proces.exportar.form.variables.agrupacio=Agrupació
+definicio.proces.exportar.form.agrupacions=Agrupacions
+definicio.proces.exportar.form.documents=Documents
+definicio.proces.exportar.form.terminis=Terminis
+definicio.proces.exportar.form.accions=Accions
+
+definicio.proces.importar.form.titol.entorn=Importació definició de procés dins l''entorn "{0} - {1}"
+definicio.proces.importar.form.titol.tipus=Importació definició de procés dins el tipus d''expedient "{0} - {1}"
+definicio.proces.importar.form.titol.definicio=Importació informació sobre la definició de procés "{0} - {1} v{2}"
+definicio.proces.importar.form.avis.codi.diferent=Avís: S''està important informació de la definició de procés <b>"{0} - {1} v{2}"</b> amb codi diferent de la actual sobre la que s''està realitzant la importació
+definicio.proces.importar.form.boto.carregar=Carregar
+definicio.proces.importar.form.carregar=Carregar el fitxer
+definicio.proces.importar.form.seleccionar=Seleccionar el contingut
+definicio.proces.importar.form.opcions.sobreEscriure=Sobreescriure dades existents amb mateix codi
+definicio.proces.importar.form.camp.codi=Codi
+definicio.proces.importar.form.camp.versio=Versió
+
+definicio.proces.importar.form.error.arxiu.buit=No s'ha seleccionat cap arxiu o no conté cap informació
+definicio.proces.importar.form.error.arxiu.erroni=El contingut de l'arxiu no es correspon amb una exportació de definició de procés tal i com s'espera
+definicio.proces.importar.form.error.lectura=Error llegint l'arxiu a importar
+definicio.proces.importar.form.error.importacio=Error durant la importació del contingut: {0}
+definicio.proces.importar.validacio.codi.repetit.entorn=La definició de procés "{0}" ja està publicada dins l''entorn "{1}"
+definicio.proces.importar.validacio.codi.repetit.tipusExpedient=La definició de procés "{0}" ja està publicada al tipus d''expedient "{1}"
+
+definicio.proces.importar.form.success=La importació de la definició de procés s'ha realitzat correctament.
+
 
 tasca.llistat.titol=Consulta de tasques
 tasca.llistat.filtre.camp.titol=Títol
@@ -1118,6 +1165,14 @@ comu.false=No
 
 comu.check=&#10003
 
+comuns.georeferencia=Georeferència
+comuns.georeferencia.codi=Codi georeferencial
+comuns.georeferencia.coordenades=Coordenades georeferència
+comuns.georeferencia.coordX=X\: 
+comuns.georeferencia.coordY=Y\: 
+comuns.georeferencia.coordenadaX=Coordenada X
+comuns.georeferencia.coordenadaY=Coordenada Y 
+
 perfil.usuari.expedients=Expedients
 perfil.usuari.tasques=Tasques
 perfil.usuari.informes=Informes
@@ -1185,6 +1240,15 @@ permis.SUPERVISION=Supervisió
 permis.MANAGE=Gestió
 permis.REASSIGNMENT=Reassignació
 
+etiqueta.exp.id=Id de l'expedient
+etiqueta.exp.numero=Número d'expedient
+etiqueta.exp.titol=Títol de l'expedient
+etiqueta.exp.comentari=Comentari de l'expedient
+etiqueta.exp.iniciador=Iniciador de l'expedient
+etiqueta.exp.responsable=Responsable de l'expedient
+etiqueta.exp.data_ini=Data d'inici de l'expedient
+etiqueta.exp.tipus=Tipus d'expedient
+etiqueta.exp.estat=Estat de l'expedient
 
 #############################################################
 # MISSATGES D'ERROR
