--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -263,6 +263,7 @@ error.defpro.eliminar.constraint=No es pot eliminar la definició de procés [ {0}
 error.defpro.eliminar.constraint.taskinstance=ERROR: Existeixen tasques associades a la definició de procés antiga, tot i haver-se canviat de versió els expedients.
 error.defpro.eliminar.constraint.job=ERROR: Existeixen timers actius associats a la definició de procés antiga.
 error.defpro.eliminar.constraint.log=ERROR: Existeixen referències en logs associats a la definició de procés antiga que no es poden substituir per referències a la definició de procés actual dels expeidents. Per a poder esborrar la definició de procés serà necessari eliminar els logs dels expedients relacionats.
+error.defpro.eliminar.constraint.log_no_exp=ERROR: Existeixen referències en logs associats a la definició de procés antiga que no es poden substituir per referències a la definició de procés actual dels expeidents.
 error.defpro.eliminar.constraint.swl=ERROR: Existeixen referències a la 'SWIMLANE' de la definició de procés que n'impedeixen l'eliminació.
 error.defpro.eliminar.constraint.procdef=ERROR: Existeixen referències de la definició de procés que n'impedeixen l'eliminació.
 ##
