#915: Propagació de plantilles a versions anteriors
Task-Url: https://github.com/GovernIB/helium/issues/issues/915

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -164,6 +164,7 @@ expedient.eines.reprendre_expedient=Desfer finalització de l'expedient
 expedient.eines.reprendre_expedients=Desfer finalització dels expedients
 expedient.eines.buidarlog.expedients=Eliminar la informació de registre dels expedients
 expedient.eines.reassignar.expedients=Reassignar tasca
+expedient.eines.propagar.plantilles=Propagar plantilles ({0})
 expedient.eines.script=Script
 expedient.eines.canviar_versio_proces=Canviar la versió del procés
 expedient.eines.canviar_versio=Canviar a la versió
@@ -1230,6 +1231,11 @@ enumeracio.valors.arxiu_exp=Arxiu a importar
 enumeracio.valors.importar=Importar
 
 estats.form.titol=Modificar estat
+
+exptipus.info.propagar.plantilles=Propagar plantilles
+exptipus.info.propagar.plantilles.info=Planifica la propagació dels documents de tipus plantilla de les darreres versions de les definicions de procés cap a les versions anteriors amb expedients actius
+exptipus.info.propagar.success=Tasca de propagació de plantilles a versions anteriors de les definicions de processos programada correctament
+exptipus.info.propagar.error=Error programant la tasca de propagació de plantilles a versions anteriors: {0}
 
 exptipus.sistra.mapeigs.vars_variables=Mapeig de variables
 exptipus.sistra.mapeigs.vars_documents=Mapeig de documents
