#916: Propagació de variables en consultes per tipus
Task-Url: https://github.com/GovernIB/helium/issues/issues/916

Afegeixo control per si el tipus d'expedient no té definicions de procés
o consultes a les que fer la propagació (Helium v3.1.60).

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -1237,12 +1237,14 @@ exptipus.info.propagar.plantilles=Propagar plantilles
 exptipus.info.propagar.plantilles.info=Planifica la propagació dels documents de tipus plantilla de les darreres versions de les definicions de procés cap a les versions anteriors amb expedients actius
 exptipus.info.propagar.plantilles.success=Tasca de propagació de plantilles a versions anteriors de les definicions de processos programada correctament
 exptipus.info.propagar.plantilles.error=Error programant la tasca de propagació de plantilles a versions anteriors: {0}
+exptipus.info.propagar.plantilles.error.cap=El tipus d'expedient no conté cap definició de procés a la que propagar les variabes
 exptipus.info.propagar.plantilles.auxText={0} ({1} versions, {2} plantilles, {3} actualitzacions)
 
 exptipus.info.propagar.consultes=Propagar consultes
 exptipus.info.propagar.consultes.info=Planifica la propagació de les variables en les consultes per tipus per canviar la referència de les variables de tipus filtre i informe cap a la darrera versió de la definició de procés corresponent
 exptipus.info.propagar.consultes.success=Tasca de propagació de les variables en les consultes programada correctament
 exptipus.info.propagar.consultes.error=Error programant la tasca de propagació de les variables en consultes: {0}
+exptipus.info.propagar.consultes.error.cap=El tipus d'expedient no conté cap consulta a la que propagar les variabes
 exptipus.info.propagar.consultes.error.camp=No s''ha pogut propagar el camp "{0}" de tipus "{1}" de la consulta "{2}" de la definició de procés "{3} v.{4}" a la darrera versió "v.{5}" perquè no s''ha trobat la variable
 exptipus.info.propagar.consultes.auxText={0} ({1} variables, {2} actualitzacions, {3} errors)
 
