#919: Desplegar nova definició de procés sense canvi de versió
Task-Url: https://github.com/GovernIB/helium/issues/issues/919

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -467,6 +467,16 @@ txt.desplegament.jbpm=Desplegament jBPM
 txt.exportacio.definicioProces=Exportació Definició de Procés
 txt.exportacio.tipusExpedient=Exportació Tipus d'Expedient
 txt.exportacio.helium=Exportació Helium
+
+desplegament.jbpm.accio=Opció de desplegament del .par
+desplegament.jbpm.accio.desplegar=Desplegar tot el contingut del .par i crear una nova versió
+desplegament.jbpm.accio.actualitzar=Actualitzar els handlers de la darrera versió sense incrementar versió
+desplegament.jbpm.accio.actualitzar.confirmacio=S''han actualitzat correctament els handlers de la definició de procés {0} v.{1}
+desplegament.jbpm.accio.actualitzar.excepcio=Error actualitzant els handlers: {0}
+desplegament.jbpm.accio.actualitzar.error.arxiuNom=Arxiu amb extensió no suportada "{0}". Només se suporta la extensió .*ar
+desplegament.jbpm.accio.actualitzar.error.parse=El contingut del fitxer no s'ha pogut processar
+desplegament.jbpm.accio.actualitzar.error.jbpmKey=No hi ha cap definició de procés a l''entorn amb la clau "{0}" per actualitzar
+
 info.arxiu.desplegat=L'arxiu s'ha desplegat amb èxit
 info.arxiu.desplegat.actualitzat=Les versions de procés s'han actualitzat amb èxit
 info.arxiu.desplegat.actualitzat.error=S'ha produit un error actualitzant les versions de procés
