#821: Manteniment de tipus d'expedient nova interfície
Task-Url: https://github.com/GovernIB/helium/issues/issues/821

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -930,6 +930,9 @@ definicio.proces.pipelles.definicio.proces.actual=Definició de procés actual
 definicio.proces.pipelles.pipella.detalls=Detalls
 definicio.proces.pipelles.pipella.tasques=Tasques
 definicio.proces.pipelles.pipella.variables=Variables
+definicio.proces.pipelles.pipella.documents=Documents
+definicio.proces.pipelles.pipella.terminis=Terminis
+definicio.proces.pipelles.pipella.accions=Accions
 definicio.proces.pipelles.pipella.recursos=Recursos
 definicio.proces.pipelles.cap=No s'ha trobat cap definició de procés amb aquest codi
 definicio.proces.pipelles.confirmacio.esborrar=Estau segur que voleu esborrar aquesta versió de la definició de procés? Aquesta acció no es pot tornar enrera una vegada executada
