--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -137,6 +137,14 @@ expedient.termini.modificar=Modificar termini
 expedient.termini.modificar.tipus=Tipus de modificació
 expedient.termini.data.inici=Data d'inici
 expedient.termini.data.fi=Data de fi
+
+expedient.notificacio.notificacions=Notificacions
+expedient.notificacio.data=Data
+expedient.notificacio.assumpte=Assumpte
+expedient.notificacio.estat=Estat
+expedient.notificacio.interessat=Interessat
+expedient.notificacio.document=Document
+
 expedient.eines.confirm_aturar=Estau segur que voleu donar aquesta tasca per finalitzada?
 expedient.eines.confirm_aturar_tramitacio=Estau segur que voleu aturar la tramitació d'aquest expedient?
 expedient.eines.confirm_modificar_variable=Estau segur que voleu modificar el valor d'aquesta variable en aquest(s) expedient(s)?
@@ -880,6 +888,7 @@ common.tabsexptipus.informacio=Informació
 common.tabsexptipus.estats=Estats
 common.tabsexptipus.definicions=Definicions de procés
 common.tabsexptipus.integ_tram=Integració amb tràmits
+common.tabsexptipus.integ_sistra=Integració amb Sistra
 common.tabsexptipus.integ_forms=Integració amb forms
 common.tabsexptipus.enumeracions=Enumeracions
 common.tabsexptipus.dominis=Dominis
