#918: Integració amb el plugin de passarel·la de firma
http://github.com/GovernIB/helium/issues/918

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -505,6 +505,23 @@ permis.SUPERVISION=Supervisió
 permis.MANAGE=Gestió
 permis.REASSIGNMENT=Reassignació
 
+passarelafirma.seleccio.titol=Selecció del mòdul de firma
+passarelafirma.seleccio.capsalera=Seleccioni un mòdul de firma
+passarelafirma.form.titol=Firma de document amb passarel·la
+passarelafirma.form.conversio.avis=Es canviarà el format del document abans d'iniciar el procés de firma
+passarelafirma.form.conversio.boto.previsualitzar=Previsualitzar
+passarelafirma.form.camp.motiu=Motiu
+passarelafirma.form.camp.lloc=Lloc de la firma
+passarelafirma.form.iniciar=Iniciar procés de firma
+document.controller.firma.passarela.final.cancel=La firma del document ha estat cancel·lada
+document.controller.firma.passarela.final.ok=La firma del document ha finalitzat correctament
+document.controller.firma.passarela.final.ok.nofile=La firma del document ha finalitzat correctament però no ha retornat cap document
+document.controller.firma.passarela.final.ok.statusnok=La firma del document ha finalitzat correctament però l'estat del document no és l'esperat
+document.controller.firma.passarela.final.ok.statuserr=La firma del document ha finalitzat correctament però l'estat del document no és l'esperat
+document.controller.firma.passarela.final.error=La firma del document ha produit el seguent error: {1}
+document.controller.firma.passarela.final.error.validacio=La firma del document ha produit un error al validar i custodiar: 
+document.controller.firma.passarela.final.cancel=La firma del document ha estat cancel·lada
+document.controller.firma.passarela.final.desconegut=La firma del document ha finalitzat amb estat desconegut
 
 #############################################################
 # MISSATGES D'ERROR
